--- a/My Job/Writing/kapitel/kapitel4.tex
+++ b/My Job/Writing/kapitel/kapitel4.tex
@@ -104,6 +104,7 @@ d(t) = R(t)_{insitu} - R(t)_{model}
 \end{equation}
 By presenting the CDF of $d$, the quality of the model can be estimate. By setting the appropriate quantile we are able to choose better time series for further analyse. 
 \section{Estimating the runoff using quantile function and water level height}\label{sec:waterlevel}
+Since the total water storage, the precipitation and evapotransipiration are available, the runoff can be determined using equation of terrestrial water balance \autoref{equa:waterbalence}. However, in \cite{10.1175/JHM-D-13-0157.1}, it was proved that this budget based approaches do not provide realistic runoff estimates because of significant biases in the input datasets. Therefore, other methods to determine runoff has to be considered. For example by using global runoff datasets or using quantile function with water level height. \\\\
 The river discharge at the selected gauges is typically determined from an empirical functional relation between water level estimated by satellite altimetry and measured discharges. This relation, referred to as a rating curve, is specific to each gauging station and location of altimetry. However, this technique has many limitations. First, first, this technique is limited by the availability of in situ discharge measurements simultaneous with altimetry data. Second, the location of the altimetry foot- print can also limit the usage of the technique.\\\\
 Fortunately, \cite{tourian2013quantile} provides a methods, which can represent a direct connection between the quantile functions at the corresponding probability and the relationship between runoff and water level. \\\\
 first, we get the quantile functions for altimetric water level,$Q_R(p)$ and discharge from in situ measurement, $Q_W(p)$:
