--- a/My Job/Writing/literatur/bib.bib
+++ b/My Job/Writing/literatur/bib.bib
@@ -192,3 +192,19 @@ publisher={Blackwell Publishing Ltd Oxford, UK}
 	author={Peel, Murray C and Finlayson, Brian L and McMahon, Thomas A},
 	year={2007}
 }
+
+@article{10.1175/JHM-D-13-0157.1,
+	author = {Lorenz, Christof and Kunstmann, Harald and Devaraju, Balaji and Tourian, Mohammad J. and Sneeuw, Nico and Riegger, Johannes},
+	title = "{Large-Scale Runoff from Landmasses: A Global Assessment of the Closure of the Hydrological and Atmospheric Water Balances*}",
+	journal = {Journal of Hydrometeorology},
+	volume = {15},
+	number = {6},
+	pages = {2111-2139},
+	year = {2014},
+	month = {12},
+	abstract = "{The performance of hydrological and hydrometeorological water-balance-based methods to estimate monthly runoff is analyzed. Such an analysis also allows for the examination of the closure of water budgets at different spatial (continental and catchment) and temporal (monthly, seasonal, and annual) scales. For this analysis, different combinations of gridded observations [Global Precipitation Climatology Centre (GPCC), Global Precipitation Climatology Project (GPCP), Climate Prediction Center (CPC), Climatic Research Unit (CRU), and University of Delaware (DEL)], atmospheric reanalysis models [Interim ECMWF Re-Analysis (ERA-Interim), Climate Forecast System Reanalysis (CFSR), and Modern-Era Retrospective Analysis for Research and Applications (MERRA)], partially model-based datasets [Global Land Surface Evaporation: The Amsterdam Methodology (GLEAM), Moderate Resolution Imaging Spectroradiometer (MODIS) Global Evapotranspiration Project (MOD16), and FLUXNET Multi-Tree Ensemble (FLUXNET MTE)], and Gravity Recovery and Climate Experiment (GRACE) satellite-derived water storage changes are employed. The derived ensemble of hydrological and hydrometeorological budget–based runoff estimates, together with results from different land surface hydrological models [Global Land Data Assimilation System (GLDAS) and the land-only version of MERRA (MERRA-Land)] and a simple predictor based on the precipitation–runoff ratio, is compared with observed monthly in situ runoff for 96 catchments of different sizes and climatic conditions worldwide. Despite significant shortcomings of the budget-based methods over many catchments, the evaluation allows for the demarcation of areas with consistently reasonable runoff estimates. Good agreement was particularly observed when runoff followed a dominant annual cycle like the Amazon. This holds true also for catchments with an area far below the spatial resolution of GRACE, like the Rhine. Over catchments with low or nearly constant runoff, the budget-based approaches do not provide realistic runoff estimates because of significant biases in the input datasets. In general, no specific data combination could be identified that consistently performed over all catchments. Thus, the performance over a specific single catchment cannot be extrapolated to other regions. Only in few cases do specific dataset combinations provide reasonable water budget closure; in most cases, significant imbalances remain for all the applied datasets.}",
+	issn = {1525-755X},
+	doi = {10.1175/JHM-D-13-0157.1},
+	url = {https://doi.org/10.1175/JHM-D-13-0157.1},
+	eprint = {https://journals.ametsoc.org/jhm/article-pdf/15/6/2111/4128046/jhm-d-13-0157\_1.pdf},
+}
