--- a/My Job/Writing/kapitel/kapitel6.tex
+++ b/My Job/Writing/kapitel/kapitel6.tex
@@ -1,7 +1,6 @@
 \chapter{Conclusion and outlook}
 \section{Conclusion}
-In this work the behavior of total water storage along with other water cycle component in Ob river basin since 2003 are discussed. The equivalent water height is through GRACE and GRACE-FO mission determined, precipitation and evapotranspiration are obtained from various data models and Runoff is measured using satellite altimetry indirectly. For each of these component, one final time series is generated using mathematic and statistic methods. The whole time series divide into 3 periods and the change of each component in these periods are analyzed. \\\\
-The GRACE data showed that before 2013, the total water storage in Ob river basin is quite stable but from 2013 to 2015 it has a large increase. This is due to the increase of the precipitation in this area. Meanwhile, runoff changed not much, evapotranspiration has also increased but not as much as precipitation.\\\\
-After 2015, the runoff of basin was shown to have a obvious growth according to space measurement but both of precipitation and evapotranspiration were lower than in the second period (still higher than the first period). However, because of a one-year gap between GRACE and GRACE-FO, the average change of total water storage during this period may be not very reliable. However, one thing is clear, the water cycle in this area is no more stable since 2013.
+In this work the behavior of total water storage along with other water cycle component in Ob river basin since 2003 are discussed. The equivalent water height is through GRACE and GRACE-FO mission determined, precipitation and evapotranspiration are obtained from various data models and Runoff is measured using satellite altimetry indirectly. For each of these component, one final time series is generated using mathematical and statistic methods. The whole time series divide into 3 periods and the change of each component in these periods are analyzed. \\\\
+The GRACE data showed that before 2013, the total water storage in Ob river basin has slightly decreased, from 2013 to 2015 there is a positive trend of the total water storage and this is due to the growth of the precipitation amount. After 2015, the precipitation in this area has a decline comparing to the value between 2013 and 2015. Though evapotranspiration are also weaker in this period it was not as strong as precipitation and meanwhile runoff may have increased. As a result, total water storage has reduced since 2016. 
 \section{Outlook}
-As mentioned, the trend of total water storage after 2016 is still not clear because of the gap between GRACE and GRACE-FO. This issue can be easily solved in the future when more data is acquirable. 
+There is still some questions that can be answered. For example, from 2003 to 2012 the trend of total water storage is negative, but the exact time interval of this tendency is not mathematically detected. Besides, this work focus on water changes of the whole basin, these changes can be caused by one or more specific subarea of it. By further spatial analyzing those subareas, which have the major influence on the whole basin, should be detected. \\\\
